unpackaged/main/default/objects/Relacion_Precio_Proveedor__c/Relacion_Precio_Proveedor__c.object-meta.xml
<CustomObject>
    <label>Proveedor</label>
    <nameField>
        <displayFormat>RPP-{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proveedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>