unpackaged/main/default/objects/Relacion_Precio_Proveedor__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Relacion_Productos_Proveedores</relationshipName>
    <type>Lookup</type>
</CustomField>