unpackaged/main/default/objects/Relacion_Precio_Proveedor__c/fields/Proveedor2__c.field-meta.xml
<CustomField>
    <fullName>Proveedor2__c</fullName>
    <formula>HYPERLINK(&quot;https://javer--preprod.sandbox.lightning.force.com/lightning/r/Relacion_Precio_Proveedor__c/&quot;&amp; Id &amp; &quot;/view&quot;, Name &amp; &quot; - &quot; &amp; Proveedor__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proveedor</label>
    <type>Text</type>
</CustomField>