unpackaged/main/default/objects/Relacion_Precio_Proveedor__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proveedor</label>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipName>Relacion_Productos_Proveedores</relationshipName>
    <type>Lookup</type>
</CustomField>